Revision history for Perl extension Archive-Zip

1.27_01 Tue 16 Dec 2008 - Adam Kennedy
	- This is a test release for various improvements provided by
	  Alan Haggai. The entire release is credited to his grant work.
	- Fixed #25726: extractMembers failing across fork on Windows.
	- Fixed #12493: Can't add new files to archives which contain
	  files named 0,1,2,3,4,5,6,7,8,9 with no extension.
	  (Files named "0" are not archived)
	- Fixed #22933: Properly extract symbolic links.
	- Fixed #20246: Ability to assign a compression level to addTree
	  calls.
	- Corrected regular expression for stripping trailing /
	- Corrected addFileOrDirectory() behaviour and cleaned up some code
	- Added symbolic link support to addFileOrDirectory
	- Fixed #34657: No option, undefined behavior zipping symbolic
	  links (symlinks)
	- Added storeSymbolicLink()
	- Fixed bitFlag() to set General Pupose Bit Flags

1.26 Mon 13 Oct 2008 - Adam Kennedy
	- Fixed the dreaded but #24036: WinXP Explorer Exposes Problems.
	  This caused directories to appear as files in Windows Explorer
	  and was caused by Windows always reading the msdos directory bit
	  even when the file attributes are types as unix.
	  Resolved by emulating the behaviour of Info-Zip and setting
	  the 5th bit in the externalFileAttributes field.

1.25 Sat 11 Oct 2008 - Adam Kennedy
	- Removing "use warnings" instances that somehow slipped in
	- Skip test if Digest::MD5 is not available

1.24 Sun 23 Aug 2008 - Adam Kennedy
	- Blatantly pander to CPANTS by adding use strict to a deprecated module
	- Add an explicit load of FileHandle since in some circumstances,
	  calling GLOB->print() failed.
	- Fixed http://rt.cpan.org/Public/Bug/Display.html?id=25925 :
	- Archive-Zip wrote faulty .zip files when $\ was set (such as when running
	  using perl -l).
	- Incorporated a heavily modified version of ECARROLL's test file.
	- Thanks for ECARROLL for reporting it, and helping with the investigation.